[package]
name = "okx-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
dotenv = "0.13"
hmac = "0.11"
sha2 = "0.9"
base64 = "0.20" 